# VOLE-ocity

./: README.md  circuit_gates.txt  circuit_parser.py
SW Bench/: Cargo.toml  README.md
SW Bench/benches/: README.md  e2e.rs  voleith.rs
SW Bench/benches/utils/: e2e.rs  mod.rs  voleith.rs
SW Bench/circuits/: README.md  sample_circuit.txt  sample_private.txt  sha256.rs
SW Bench/circuits/keccak_f/: private.txt
SW Bench/circuits/sha256/single/: private.txt  public.txt
SW Bench/foundry/: README.md  foundry.toml
SW Bench/foundry/script/: deploy.s.sol  verify.s.sol
SW Bench/foundry/src/: proof.json  verifier.sol
SW Bench/foundry/test/: VerifyProof.t.sol
SW Bench/src/: e2e.rs  main.rs  mod.rs  serialize.rs  snark.rs  voleith.rs
VOLEitH-FPGA/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_124004.py  workspace_journal_13646.py  workspace_journal_14762.py  workspace_journal_16503.py  workspace_journal_1823828.py  workspace_journal_190569.py  workspace_journal_2117778.py  workspace_journal_213530.py  workspace_journal_2204531.py  workspace_journal_31477.py  workspace_journal_34511.py  workspace_journal_35677.py  workspace_journal_36382.py  workspace_journal_57018.py  workspace_journal_584985.py  workspace_journal_586323.py  workspace_journal_613105.py  workspace_journal_6353.py  workspace_journal_6409.py  workspace_journal_732739.py  workspace_journal_8215.py  workspace_journal_86179.py  workspace_journal_867579.py  workspace_journal_869250.py  workspace_journal_87579.py  workspace_journal_9222.py  (+2 more)
(+1052 files in other folders)
